# Rust-Embedding

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/embeddings/: mod.rs  service.rs  storage.rs
src/http/: client.rs
src/utils/: similarity.rs
tests/: api_tests.rs
